force-app/main/default/objects/Opportunity/fields/AccountBillingState__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingState__c</fullName>
    <formula>Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountBillingState</label>
    <type>Text</type>
</CustomField>