force-app/main/default/objects/Opportunity/fields/Annual_Revune__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revune__c</fullName>
    <formula>Account.AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Revune</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>