force-app/main/default/objects/Opportunity/fields/CheckboxOPP__c.field-meta.xml
<CustomField>
    <fullName>CheckboxOPP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckboxOPP</label>
    <type>Checkbox</type>
</CustomField>