force-app/main/default/objects/Opportunity/fields/MO_Price__c.field-meta.xml
<CustomField>
    <fullName>MO_Price__c</fullName>
    <formula>Order__r.MO_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MO Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>