force-app/main/default/objects/Opportunity/fields/Opp_Crdit_Status__c.field-meta.xml
<CustomField>
    <fullName>Opp_Crdit_Status__c</fullName>
    <formula>Account.Credit_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Crdit Status</label>
    <type>Text</type>
</CustomField>