force-app/main/default/objects/Opportunity/fields/ProductCount__c.field-meta.xml
<CustomField>
    <fullName>ProductCount__c</fullName>
    <label>ProductCount</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>