force-app/main/default/objects/Opportunity/recordTypes/Opp_Recordtype1.recordType-meta.xml
<RecordType>
    <fullName>Opp_Recordtype1</fullName>
    <active>true</active>
    <businessProcess>Domestic</businessProcess>
    <label>Opp Recordtype1</label>
</RecordType>