force-app/main/default/objects/Opportunity/recordTypes/Opp_Recordtype2.recordType-meta.xml
<RecordType>
    <fullName>Opp_Recordtype2</fullName>
    <active>true</active>
    <businessProcess>international</businessProcess>
    <description>Opp Recordtype2</description>
    <label>Opp Recordtype2</label>
</RecordType>