force-app/main/default/objects/Opportunity/validationRules/Update_picklist_based_on_the_text_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_picklist_based_on_the_text_field</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( StageName , &quot;closed Won&quot;),

 ISBLANK( Details__c) )</errorConditionFormula>
    <errorMessage>Please enter the description filed</errorMessage>
</ValidationRule>